<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <ProgressBar
            android:id="@+id/checkin_loading"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/sicredi_FFCC7B26_FFCC7B26"
            android:visibility="gone"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/checkin_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/sicredi_8dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/checkin_instruction_label"
                android:layout_width="@dimen/sicredi_0dp"
                android:layout_height="wrap_content"
                android:text="Para prosseguir, precisamos que informe seus dados..."
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/checkin_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sicredi_12dp"
                app:startIconDrawable="@android:drawable/ic_menu_sort_by_size"
                app:startIconTint="@color/sicredi_FFCC7B26_FFCC7B26"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkin_instruction_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/sicredi_EFECEC_5C5C5C"
                    android:inputType="text"
                    android:hint="@string/checkin_user_name_hint_text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/checkin_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sicredi_12dp"
                app:startIconDrawable="@android:drawable/ic_dialog_email"
                app:startIconTint="@color/sicredi_FFCC7B26_FFCC7B26"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkin_user_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/sicredi_EFECEC_5C5C5C"
                    android:inputType="textEmailAddress"
                    android:hint="@string/checkin_user_email_hint_text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/checkin_send_data_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_rounded"
                android:text="@string/checkin_send_data_btn_text"
                android:layout_marginTop="@dimen/sicredi_12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkin_user_email"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>