<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="event"
            type="com.mlodi.sicredi.devandroidtest.data.api.model.Event" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/event_info_loading"
            android:layout_width="@dimen/sicredi_0dp"
            android:layout_height="50dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/sicredi_FFCC7B26_FFCC7B26"
            android:visibility="visible"
            tools:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/event_info_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/event_info_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                app:imageUrl="@{event.image}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/event_info_title"
                style="@style/ThemeTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@{event.title}"
                tools:text="%EVENT_TITLE%"
                android:layout_margin="@dimen/sicredi_8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_info_image"/>

            <ScrollView
                android:layout_width="@dimen/sicredi_0dp"
                android:layout_height="@dimen/sicredi_0dp"
                android:layout_marginTop="@dimen/sicredi_22sp"
                android:layout_marginStart="@dimen/sicredi_8dp"
                android:layout_marginEnd="@dimen/sicredi_8dp"
                android:layout_marginBottom="@dimen/sicredi_12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_info_title"
                app:layout_constraintBottom_toTopOf="@+id/event_info_checkin_btn">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/event_info_date_label"
                        style="@style/ThemeTextTitle"
                        android:layout_width="@dimen/sicredi_0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewStart"
                        android:text="@string/event_info_date_label_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/event_info_date"
                        android:layout_width="@dimen/sicredi_0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewStart"
                        tools:text="20/03/2022 13:00"
                        app:dateText="@{event.date}"
                        android:layout_marginStart="@dimen/sicredi_8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/event_info_date_label"/>

                    <TextView
                        android:id="@+id/event_info_description_label"
                        style="@style/ThemeTextTitle"
                        android:layout_width="@dimen/sicredi_0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewStart"
                        android:text="@string/event_info_description_label_text"
                        android:layout_marginTop="@dimen/sicredi_22sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/event_info_date"/>

                    <TextView
                        android:id="@+id/event_info_description"
                        android:layout_width="@dimen/sicredi_0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewStart"
                        tools:text="Detalhes importantes para comparecimento ao evento..."
                        android:text="@{event.description}"
                        android:layout_marginStart="@dimen/sicredi_8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/event_info_description_label"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

            <Button
                android:id="@+id/event_info_checkin_btn"
                style="@style/ThemeButtonPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@null"
                android:text="@string/event_info_checkin_btn_text"
                android:layout_marginEnd="@dimen/sicredi_12dp"
                android:layout_marginBottom="@dimen/sicredi_12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/event_info_price"
                style="@style/ThemeTextMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="R$ 99,90"
                app:moneyText="@{event.price}"
                android:layout_marginStart="@dimen/sicredi_12dp"
                app:layout_constraintTop_toTopOf="@+id/event_info_checkin_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/event_info_checkin_btn"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>